# shellsage

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: post_tool_use.py  pre_tool_use.py
.github/workflows/: ci.yml  docs.yml
docs/: architecture.md  changelog.md  cli.md  configuration.md  contributing.md  index.md  mcp-tools.md  quickstart.md  setup.md  translation-reference.md
docs/stylesheets/: extra.css
shellsage/: __init__.py  __main__.py  cli.py  config.py  daemon.py  embedder.py  models.py  rules.py  seed.py  server.py  setup_wizard.py  store.py  translator.py
tests/: test_models.py  test_rules.py  test_seed.py  test_store.py  test_store_hybrid.py  test_translator.py
