[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shellsage"
version = "0.1.0"
description = "Shell command translation layer for Claude Code and GitHub Copilot — saves tokens by fixing bash/PowerShell mismatches before they enter LLM context."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "ShellSage Contributors" }]
keywords = ["claude-code", "copilot", "mcp", "qdrant", "powershell", "tokens"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

# Minimal core — only what's needed to translate + store
dependencies = [
    "qdrant-client>=1.9.0",
    "sentence-transformers>=3.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
# MCP server support (Claude Code + Copilot integration)
mcp = ["fastmcp>=0.9.0"]

# Full install
all = ["shellsage[mcp]"]

# Dev/test
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-click",
]

[project.scripts]
shellsage = "shellsage.cli:main"

[project.urls]
Homepage = "https://github.com/shellsage/shellsage"
Issues = "https://github.com/shellsage/shellsage/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["shellsage*"]

# ── Ruff (lint + format) ──────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=shellsage --cov-report=term-missing"
