[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shellsage"
version = "0.3.0"
description = "Shell command translation layer for AI agent IDEs — no external services required."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "ShellSage Contributors" }]
keywords = ["claude-code", "copilot", "vscode", "kiro", "mcp", "powershell", "tokens"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

# Zero heavy deps — sqlite3 is part of the stdlib.
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
# MCP server support (Claude Code + Copilot integration) + HTTP background mode + Anthropic proxy
mcp = [
    "mcp>=1.9.4",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
]

# Full install
all = ["shellsage[mcp]"]

# Dev/test
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-click",
]

[project.scripts]
shellsage = "shellsage.cli:main"

[project.urls]
Homepage = "https://github.com/shellsage/shellsage"
Issues = "https://github.com/shellsage/shellsage/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["shellsage*"]

# ── Ruff (lint + format) ──────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
